貢献とトラブルシューティングのドキュメントの追加、Dockerのセットアップの更新
プロジェクトのガイダンスと問題解決のためにCONTRIBUTING.mdとTROUBLESHOOTING.mdを追加。.gitignoreを更新し、より包括的なパターンを追加。互換性を高めるために、Node.js 20とx86_64プラットフォームを使用するようにDockerfileを改良。より高速なビルドのためのDockerfile.fastを追加。READMEを強化し、セットアップ手順、ツールバージョン、トラブルシューティングリファレンスを追加。

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,39 @@
 # Make Project
-blueshift_anchor_vault
-blueshift_anchor_escrow
-blueshift_pinocchio_vault
-blueshift_pinocchio_escrow
+blueshift_anchor_vault/
+blueshift_anchor_escrow/
+blueshift_pinocchio_vault/
+blueshift_pinocchio_escrow/
+test-project/
+
+# Anchor/Solana artifacts
+target/
+.anchor/
+test-ledger/
+node_modules/
+dist/
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# Docker override files
+docker-compose.override.yml
+.dockerignore.local
